--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
 language: php
+
 php:
   - 5.6
   - 5.5
   - 5.4
   - hhvm
-install: composer install
+
+install:
+ - composer install --dev --no-interaction
+
+script:
+ - mkdir -p build/logs
+ - phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+ - php vendor/bin/coveralls -v
+ 
