--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"container-interop/container-interop" : "~1.0"
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "~3.7"
+		"phpunit/phpunit" : "~3.7",
+		"satooshi/php-coveralls": "dev-master"
 	},
 	"autoload" : {
 		"psr-4" : {
