--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 	"homepage" : "http://mouf-php.com",
 	"license" : "MIT",
 	"require" : {
-		"container-interop/container-interop" : "~1.0"
+		"container-interop/container-interop" : "~1.2",
+		"psr/container": "^1.0"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "~4.8",
